syntax = "proto3";

option go_package = ".;pb";
package pb;

import "pb/feed.proto";


message PublishActionRequest {
  string title = 1;
  int64 authorID = 2;
  string playUrl = 3;
  string coverUrl = 4;
}

message PublishActionResponse {

}


message PublishListRequest {
  int64 userID = 1;
}

message PublishListResponse {
  repeated Video list = 1;
}




service PublishService {
  rpc Action(PublishActionRequest) returns (PublishActionResponse);
  rpc List(PublishListRequest) returns (PublishListResponse);

}